--- a/au-input/src/app/app.component.html
+++ b/au-input/src/app/app.component.html
@@ -16,7 +16,7 @@
 </header>
 
 <body>
-  <div class="container">
+  <div class="container au-fa-input-red-theme">
     <h1>Font Awesome</h1>
 
     <div class="form">
@@ -32,28 +32,28 @@
 
       <div class="form-row">
         <label>Email:</label>
-        <au-fa-input icon="envelope">
-          <input type="email" name="email" placeholder='Email'>
+        <au-fa-input id="email-field" icon="envelope">
+          <input type="email" name="email" placeholder='Email' class="test-class">
         </au-fa-input>
       </div>
 
       <div class="form-row">
         <label>Password:</label>
-        <au-fa-input icon="adn">
+        <au-fa-input icon="lock">
           <input placeholder="Password">
         </au-fa-input>
       </div>
 
-      <div class="form-row">
+      <div class="form-row stripe-field">
         <label>Stripe:</label>
-        <au-fa-input icon="adjust">
+        <au-fa-input icon="cc-stripe">
           <input placeholder="Stripe">
         </au-fa-input>
       </div>
 
       <div class="form-row">
         <label>Paypal:</label>
-        <au-fa-input icon="address-card">
+        <au-fa-input icon="paypal">
           <input placeholder="Paypal">
         </au-fa-input>
       </div>
