--- a/au-tab-panel/src/app/app.component.html
+++ b/au-tab-panel/src/app/app.component.html
@@ -1,58 +1,47 @@
-<h2>
-    Tab Panel
-</h2>
-
+<h2>Tab Panel</h2>
 
 <div class="container">
-
-    <div class="tab-panel">
-
-        <ul class="tab-panel-buttons">
-            <li class="selected">Login</li>
-            <li>Sign Up</li>
-            <li>Contact</li>
-        </ul>
-
-        <div class="tab">
+    <au-tab-panel id="tab-panel" #tabPanel>
+        <au-tab title="Login">
             <form>
                 <div class="form-field">
-                    <label>Email:</label><input>
+                    <label>Email:</label>
+                    <input>
                 </div>
                 <div class="form-field">
-                    <label>Password:</label><input>
+                    <label>Password:</label>
+                    <input>
                 </div>
             </form>
-        </div>
+        </au-tab>
 
-        <div class="tab">
+        <au-tab title="Sign Up">
             <form>
                 <div class="form-field">
-                    <label>Email:</label><input>
+                    <label>Email:</label>
+                    <input>
                 </div>
                 <div class="form-field">
-                    <label>Password:</label><input>
+                    <label>Password:</label>
+                    <input>
                 </div>
                 <div class="form-field">
-                    <label>Confirm Password:</label><input>
+                    <label>Confirm Password:</label>
+                    <input>
                 </div>
             </form>
-        </div>
-
-        <div class="tab">
+        </au-tab>
+        <au-tab title="Contact">
             <form>
                 <div class="form-field">
-                    <label>Email:</label><input>
+                    <label>Email:</label>
+                    <input>
                 </div>
                 <div class="form-field">
                     <label>Message:</label>
-                    <textarea></textarea>
+                    <input>
                 </div>
             </form>
-        </div>
-
-    </div>
-
-
+        </au-tab>
+    </au-tab-panel>
 </div>
-
-
